--- a/package.json
+++ b/package.json
@@ -11,5 +11,12 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "cors": "^2.8.5",
+    "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
+    "jest": "^30.1.1",
+    "supertest": "^7.1.4"
   }
 }
